--- a/index.html
+++ b/index.html
@@ -2,21 +2,39 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link
-			rel="icon"
-			type="image/svg+xml"
-			href="/Miscellaneous/ParthMital.svg"
-		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Parth Mital - Portfolio</title>
+		<meta name="description" content="Parth Mital's personal portfolio." />
+		<link rel="canonical" href="https://parthmital-portfolio.vercel.app/" />
+		<link rel="icon" type="image/png" href="/favicon.png" />
+		<link rel="apple-touch-icon" href="/favicon.png" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Birthstone&family=Imperial+Script&family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Pattaya&family=Tangerine:wght@400;700&display=swap"
 			rel="stylesheet"
 		/>
+		<meta property="og:title" content="Parth Mital - Portfolio" />
+		<meta
+			property="og:description"
+			content="Parth Mital's personal portfolio."
+		/>
+		<meta property="og:type" content="website" />
+		<meta
+			property="og:url"
+			content="https://parthmital-portfolio.vercel.app/"
+		/>
+		<meta property="og:image" content="/og.png" />
+		<meta property="og:image:alt" content="Parth Mital Portfolio" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="Parth Mital - Portfolio" />
+		<meta
+			name="twitter:description"
+			content="Parth Mital's personal portfolio."
+		/>
+		<meta name="twitter:image" content="/og.png" />
+		<meta name="theme-color" content="#1ed760" />
 	</head>
-
 	<body>
 		<div id="app"></div>
 		<script type="module" src="/src/main.jsx"></script>
